infrastructure/foundation/local-path-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: local-path-provisioner
    app.kubernetes.io/version: v0.0.31
  name: local-path-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: local-path-provisioner
    app.kubernetes.io/version: v0.0.31
  name: local-path-provisioner
  namespace: local-path-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: local-path-provisioner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: local-path-provisioner
        app.kubernetes.io/version: v0.0.31
    spec:
      containers:
        - args:
            - --debug
            - start
            - --config
            - /etc/config/config.json
          command:
            - local-path-provisioner
          image: docker.io/rancher/local-path-provisioner@sha256:5fb0394abf87407a27cc56db94334eb0c92d0b5de2636683a7ec51f38143dfc9
          imagePullPolicy: IfNotPresent
          name: local-path-provisioner
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
              readOnly: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: local-path-provisioner-service-account
      volumes:
        - configMap:
            name: local-path-config
          name: config-volume
